# FutureSkillsSyntax

./: .env.production  .gitignore  README.md  docker-compose.elk.yml  docker-compose.ssl.yml  nginx.conf  setup-env.sh
.github/: futureskills-ci-cd.yml
backend/: .env  .env.example  .env.mongodb.example  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  mongodb_integration_snippet.py  package.json  pyproject.toml  requirements-mongodb.txt  requirements.txt  setup_mongodb.ps1  test_mongodb.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  auth.py  career.py  collaboration.py  community.py  gamification.py  goals.py  learning.py  mentorship.py  payment.py  upload.py  user.py
backend/app/core/: config.py  database.py  logging.py  logging_config.py  mongodb.py  security.py  sentry.py  supabase_client.py
backend/app/integrations/: datadog.py
backend/app/models/: career.py  goals.py  mentorship.py  payment.py  user.py
backend/app/schemas/: admin.py  community.py  gamification.py  goals.py  learning.py  mentorship.py  user.py
backend/app/services/: auth.py  code_execution.py  email.py  gamification.py  goals_service.py  payment.py
backend/scripts/: check_db.py  seed_admin.py  sync_db.py  test_write.py  update_db.py
datadog/: agent.yaml
documentation/: README.md
elk/: logstash.conf
frontend/: .eslintrc.cjs  .prettierrc  README.md  tailwind.config.js  tsconfig.json  vite.config.ts
shared/: README.md
supabase/: .gitignore  config.toml
(+191 files in other folders)
